<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:gravity="center"
    android:background="@drawable/bg_white_20"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize20"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:text="@string/txt_confirm_book"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_marginBottom="20dp"
        android:gravity="center">
        <TextView
            android:id="@+id/btn_cancle"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancle"
            android:textStyle="bold"
            android:textSize="@dimen/textSize18"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_gray_8"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/txt_confirm"
            android:textStyle="bold"
            android:textSize="@dimen/textSize18"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_blue_8"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>
    </LinearLayout>


</LinearLayout>