<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_10"
    android:background="@drawable/bg_white_top_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/ic_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_find_location"
            android:textSize="@dimen/textSize16"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/atv_find_hotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gray_8"
        android:layout_marginTop="@dimen/margin_20"
        android:hint="@string/txt_find_room"
        android:padding="@dimen/margin_10"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textSize16"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/margin_10"/>

    <TextView
        android:id="@+id/tv_near_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_near_you"
        android:textSize="@dimen/textSize18"
        android:textColor="@color/colorBlack"
        android:drawablePadding="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        app:drawableStartCompat="@drawable/ic_near_me" />

</LinearLayout>