<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.home.AccountFragment"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_login_register"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:elevation="4dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_login_register"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/textSize22"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/layout_user_info"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:id="@+id/iv_avatar"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cardCornerRadius="32dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/aaa"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/svn_avo_bold"
                android:text="Nguyen Huu Duy"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textSize24"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_16"
            tools:ignore="UselessLeaf">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_my_page"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize22"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_my_booking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:drawablePadding="@dimen/margin_10"
                    android:text="@string/txt_my_booking"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize18"
                    app:drawableStartCompat="@drawable/ic_time" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/colorGray_2" />

                <TextView
                    android:id="@+id/tv_my_favorite_hotel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:drawablePadding="@dimen/margin_10"
                    android:text="@string/txt_my_favorite"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize18"
                    app:drawableStartCompat="@drawable/ic_favorite" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/colorGray_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_setting"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize22"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:drawablePadding="@dimen/margin_10"
                    android:text="@string/txt_notification"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize18"
                    app:drawableStartCompat="@drawable/ic_notifications" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/colorGray_2" />

                <LinearLayout
                    android:id="@+id/layout_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/margin_10"
                        android:text="@string/txt_language"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textSize18"
                        app:drawableStartCompat="@drawable/ic_language" />

                    <TextView
                        android:id="@+id/tv_language"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/english"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textSize16"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/colorGray_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_information"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize22"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:drawablePadding="@dimen/margin_10"
                        android:text="@string/txt_version"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textSize18"
                        app:drawableStartCompat="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1.0.0"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textSize16"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/colorGray_2" />

                <TextView
                    android:id="@+id/tv_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:drawablePadding="@dimen/margin_10"
                    android:text="@string/txt_contact"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize18"
                    app:drawableStartCompat="@drawable/ic_contact" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/colorGray_2" />

                <TextView
                    android:id="@+id/tv_log_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:drawablePadding="@dimen/margin_10"
                    android:text="@string/txt_log_out"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize18"
                    app:drawableStartCompat="@drawable/ic_logout" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/colorGray_2" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>