<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/bg_white_20"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:weightSum="3">

        <EditText
            android:id="@+id/edt_pin_code"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white"
            android:padding="10dp"
            android:hint="@string/txt_enter_pin_code"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:weightSum="10">

        <TextView
            android:id="@+id/btn_cancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/bg_gray_8"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/txt_cancle"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize18"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/bg_blue_8"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/txt_confirm"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize18"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>