<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.activity.find.FindLocationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarTheme"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    app:srcCompat="@drawable/ic_back"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/svn_avo_bold"
                    android:text="@string/txt_find_room"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/size_title"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/layout_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_find_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white_50"
            android:drawablePadding="@dimen/margin_10"
            android:padding="16dp"
            android:text="@string/txt_find_room"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize16"
            app:drawableEndCompat="@drawable/ic_near_me"
            app:drawableStartCompat="@drawable/ic_search" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_find"
        android:layout_margin="@dimen/margin_10"
        android:elevation="6dp"
        app:cardBackgroundColor="@color/colorBlue"
        app:cardCornerRadius="30dp"
        app:contentPaddingLeft="@dimen/margin_20"
        app:contentPaddingRight="@dimen/margin_20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_8"
            android:paddingTop="@dimen/margin_10"
            android:paddingEnd="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_10"
            android:text="@string/txt_find"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize18"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_find"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/margin_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_recent_search"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize16"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_find_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />

    </LinearLayout>


</RelativeLayout>